@@ -15,11 +15,15 @@ OPTIONS = {}
 op = OptionParser.new
 op.banner = [
   "Usage: #{File.basename("#{__FILE__}")} [options] foo.md",
-  "      You can see help with '#{File.basename("#{__FILE__}")} --help'.",
+  "       You can see help with '#{File.basename("#{__FILE__}")} --help'.",
 ].join("\n")
 op.on("-c css_file", "--css=file", "Indicate css file"){|v| OPTIONS[:css] = v}
 op.on("-C charset", "--charset=str", "Indicate charset like 'UTF-8'"){|v| OPTIONS[:charset] = v}
 op.on("-o"    , "--outline"    , "Embed outline"){    OPTIONS[:outline] = true}
+op.on("-O"    , "--outline-selflink", "Embed outline with link to the line"){
+  OPTIONS[:outline] = true
+  OPTIONS[:selflink] = true
+}
 op.on("-d"    , "--dirmap-side", "Embed sideber of directory map"){OPTIONS[:dirmap] = true}
 op.on("-s file"    , "--side", "Read file for sidebar"){|v|OPTIONS[:sidebar] = v}
 op.on("-m markdown"    , "--markdown=command", "Indicate Markdown command"){|v| OPTIONS[:markdown] = v}
